testcases/error-cases/lambda-error-01/error.txt
error[E0014]: unexpected end of file
 --> testcases\error-cases\lambda-error-01\input.canon:2:1
  |
1 | val invalid = { x: Int
2 | 
  | ^
  |
  = note: missing RBRACE at end of file
  = note: the file ended unexpectedly
  = help: check if you are missing closing braces, parentheses, or string terminators
